# TicketSystem-2025-refined

./: CMakeLists.txt  README.md  main.cpp  package.json
bridge/: websocket_bridge.py
include/: CMakeLists.txt
include/algorithm/: algorithm.h  lru_k_replacer.h
include/common/: exception.h  messenger.h
include/container/: array.h  list.h  map.h  optional.h  pair.h  priority_queue.h  queue.h  unordered_map.h  unordered_set.h  vector.h
include/database/: bplustree.h  bplustree_nodes.h  multi_bplustree.h  multi_bplustree_nodes.h
include/disk/: fstream.h
include/pool/: buffer_pool.h  index_pool.h
include/ticketsystem/: ticket_order_manager.h  ticketsystem.h  train_manager.h  ts_managers.h  ts_time.h  ts_types.h  user_manager.h
src/: CMakeLists.txt
src/algorithm/: lru_k_replacer.cpp
src/common/: messenger.cpp
src/pool/: index_pool.cpp
src/ticketsystem/: ticket_order_manager.cpp  ticketsystem.cpp  train_manager.cpp  ts_managers.cpp  ts_time.cpp  ts_types.cpp  user_manager.cpp
template/: CMakeLists.txt
template/algorithm/: algorithm.tcc
template/common/: messenger.tcc
template/container/: list.tcc  map.tcc  optional.tcc  priority_queue.tcc  queue.tcc  unordered_map.tcc  unordered_set.tcc  vector.tcc
template/database/: bplustree.tcc  bplustree_nodes.tcc  multi_bplustree.tcc  multi_bplustree_nodes.tcc
template/disk/: fstream.tcc
template/pool/: buffer_pool.tcc
web/: index.html
web/css/: style.css
web/js/: app.js  response_handler.js  ui.js  websocket.js
web/js/commands/: _base_command.js  add_train.js  add_user.js  buy_ticket.js  clean.js  delete_train.js  exit_backend.js  login.js  logout.js  modify_profile.js  query_order.js  query_profile.js  query_ticket.js  query_train.js  query_transfer.js  refund_ticket.js  release_train.js
web/js/utils/: timestamp.js
